--- a/Project/Code.html
+++ b/Project/Code.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="CSS/bootstrap.min.css" rel="stylesheet" />
     <script src="Scripts/jquery-3.5.1.min.js"></script>
+    <link rel="shortcut icon" href="favicon.ico">
 
     <link rel="icon"
           type="image/png"
