--- a/Project/Solve.html
+++ b/Project/Solve.html
@@ -16,10 +16,9 @@
     <link href="CSS/bootstrap.min.css" rel="stylesheet" />
     <script src="Scripts/jquery-3.5.1.min.js"></script>
     <link rel="shortcut icon" href="favicon.ico">
+    <link href="CSS/prism.css" rel="stylesheet" />
 
-    <link rel="icon"
-          type="image/png"
-          href="img/favicon-16x16.png">
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
 </head>
 
@@ -78,6 +77,8 @@
     <script src="//cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="//stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <script src="Scripts/bootstrap.bundle.min.js"></script>
+    <script src="Scripts/prism.js"></script>
+
 </body>
 
 </html>
