--- a/Project/Code.html
+++ b/Project/Code.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="CSS/bootstrap.min.css" rel="stylesheet" />
     <script src="Scripts/jquery-3.5.1.min.js"></script>
+    <link href="CSS/Style.css" rel="stylesheet" />
 
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
@@ -31,7 +32,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="/Index.html">
                             Home
                         </a>
@@ -39,36 +40,39 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/Solve.html">Solve</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="/Code.html">Code</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Git</a>
+                        <a target="_blank" class="nav-link" href="https://github.com/AVelez9882/FizzBuzz">Git</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Portfolio</a>
+                        <a target="_blank" class="nav-link" href="https://av-portfolio.netlify.app">Portfolio</a>
                     </li>
-                    <li class="nav-item">
+                    <!--<li class="nav-item">
                         <a class="nav-link" href="#">Blog Post/YouTube Explanation</a>
-                    </li>
+                    </li>-->
                 </ul>
             </div>
         </div>
     </nav>
 
     <!-- Page Content -->
-    <!--<div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h1 class="mt-5">FizzBuzz</h1>
-                <p class="lead">You need to use a Syntax Highlighter - Prism.js is default</p>
-                <ul class="list-unstyled">
-                    <li>Code with highlighter</li>
-                    <li>Will display on this page</li>
-                </ul>
+    <div class="bg">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center h1 sumColor elWide">FizzBuzz</div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 elWide textBox">
+                    <h3 class="text-center">
+
+                        <br />
+                    </h3>
+                </div>
             </div>
         </div>
-    </div>-->
+    </div>
 
     <!-- Bootstrap core JavaScript -->
     <script src="//code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
