--- a/Project/Index.html
+++ b/Project/Index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="CSS/bootstrap.min.css" rel="stylesheet" />
     <script src="Scripts/jquery-3.5.1.min.js"></script>
-
+    <link href="CSS/Style.css" rel="stylesheet" />
 
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
@@ -44,32 +44,46 @@
                         <a class="nav-link" href="/Code.html">Code</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Git</a>
+                        <a target="_blank" class="nav-link" href="https://github.com/AVelez9882/FizzBuzz">Git</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Portfolio</a>
+                        <a target="_blank" class="nav-link" href="https://av-portfolio.netlify.app">Portfolio</a>
                     </li>
-                    <li class="nav-item">
+                    <!--<li class="nav-item">
                         <a class="nav-link" href="#">Blog Post/YouTube Explanation</a>
-                    </li>
+                    </li>-->
                 </ul>
             </div>
         </div>
     </nav>
 
     <!-- Page Content -->
-    <!--<div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h1 class="mt-5">FizzBuzz</h1>
-                <p class="lead">You can customize the template colors</p>
-                <ul class="list-unstyled">
-                    <li>This page is for a description of the Javascript exercise</li>
-                    <li>You should include information about what the code does</li>
-                </ul>
+    
+    <div class="bg">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 h1 text-center elWide sumColor">FizzBuzz</div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 text-center h3 elWide textBox">
+                    FizzBuzz is a program that takes 2 numbers in put by the user,
+                    then it will print each number from 1-100.
+                    For each number, if it is divisible by the first number input by the user,
+                    the program will print "Fizz".
+                    If the number is divisible by the second input number, the program will print "Buzz".
+                    If the number is divisible by both input numbers, the program will print "FizzBuzz"!
+                    Otherwise, just the number as it is will be printed.
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 text-center elWide">
+                    <a href="https://av-fizzbuzz.netlify.app/solve" class="btn btn-outline-light text-center btnMarg">Give it a try!</a>
+                </div>
             </div>
         </div>
-    </div>-->
+    </div>
+
+
 
     <!-- Bootstrap core JavaScript -->
     <script src="//code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
