--- a/Project/Code.html
+++ b/Project/Code.html
@@ -12,10 +12,9 @@
     <title>FizzBuzz</title>
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="CSS/bootstrap.min.css" rel="stylesheet" />
-    <script src="Scripts/jquery-3.5.1.min.js"></script>
     <link href="CSS/Style.css" rel="stylesheet" />
+    <link href="CSS/prism.css" rel="stylesheet" />
 
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
@@ -58,27 +57,26 @@
     </nav>
 
     <!-- Page Content -->
-    <div class="bg">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center h1 sumColor elWide">FizzBuzz</div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12 elWide textBox">
-                    <h3 class="text-center">
 
-                        <br />
-                    </h3>
-                </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center sumColor">
+                <h1>FizzBuzz</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <pre id="code-output" class="line-numbers language-javascript" data-src="Scripts/Solve.js"></pre>
             </div>
         </div>
     </div>
 
+
     <!-- Bootstrap core JavaScript -->
-    <script src="//code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="//cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="//stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <script src="Scripts/bootstrap.bundle.min.js"></script>
+    <script src="Scripts/jquery-3.5.1.min.js"></script>
+    <script src="Scripts/prism.js"></script>
+
 </body>
 
 </html>
