--- a/Project/Solve.html
+++ b/Project/Solve.html
@@ -15,7 +15,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="CSS/bootstrap.min.css" rel="stylesheet" />
     <script src="Scripts/jquery-3.5.1.min.js"></script>
-    <link rel="shortcut icon" href="favicon.ico">
     <link href="CSS/prism.css" rel="stylesheet" />
     <link href="CSS/Style.css" rel="stylesheet" />
 
@@ -59,100 +58,100 @@
         </div>
     </nav>
 
-    <div class="bg">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center h1 sumColor elWide">FizzBuzz</div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12 elWide textBox">
-                    <h3 class="text-center">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col text-center h3">
-                                    Please enter two integers that we will refer to as FizzNum and BuzzNum.
-                                </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center h1 sumColor elWide">FizzBuzz</div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 elWide textBox">
+                <h3 class="text-center">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col text-center h3">
+                                Please enter two integers that we will refer to as FizzNum and BuzzNum.
                             </div>
                         </div>
-                    </h3>
-                </div>
+                    </div>
+                </h3>
             </div>
         </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-12 text-center">
-                    <input id="fbInput1" type="number" style="border-radius: 5px" class="kClass" placeholder="Enter Fizz Num" />
-                    <input id="fbInput2" type="number" style="border-radius: 5px" class="kClass" placeholder="Enter Buzz Num" />
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-12 text-center">
-                    <button class="btn btn-outline-light text-center btnMarg" style="width:40%; border-radius: 5px" id="btnFB">Run Fizz-Buzz</button>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <p id="fbOut"></p>
-                </div>
-            </div>
-        </div>
-
-        <!--<script>
-			var input = document.getElementById("fbInput2");
-			input.addEventListener("keyup", function (event) {
-				if (event.keyCode === 13) {
-					event.preventDefault();
-					document.getElementById("btnFB").click();
-				}
-			});
-
-            $("#btnFB").on("click", function () {
-                let fizzMod = 0;
-                let buzzMod = 0;
-                //let output = "";
-                let output = new Array();
-
-                let fizzNum = parseInt($("#fbInput1").val());
-                let buzzNum = parseInt($("#fbInput2").val());
-
-                for (let loop = 1; loop <= 100; loop++) {
-                    fizzMod = loop % fizzNum;
-                    buzzMod = loop % buzzNum;
-
-                    if (fizzMod == 0 && buzzMod == 0) {
-                        //output += "<span class='fizzbuzz'>FizzBuzz</span>, ";
-                        output.push("<span class='fizzbuzz'>FizzBuzz</span>")
-                    }
-                    else if (fizzMod == 0) {
-                        //output += "<span class='fizz'>Fizz</span>, ";
-                        output.push("<span class='fizz'>Fizz</span>")
-                    }
-                    else if (buzzMod == 0) {
-                        //output += "<span class='buzz'>Buzz</span >, ";
-                        output.push("<span class='buzz'>Buzz</span>")
-                    }
-                    else {
-                        //output += loop + ",";
-                        output.push(loop);
-                    }
-                }
-
-                output = output.substr(0, output.length);
-
-                $("#fbOut").html(output.join(', ')
-            });
-        </script>-->
     </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center">
+                <input id="fbInput1" type="number" style="border-radius: 5px" class="kClass" placeholder="Enter Fizz Num" />
+                <input id="fbInput2" type="number" style="border-radius: 5px" class="kClass" placeholder="Enter Buzz Num" />
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center">
+                <button id="btnFB" class="btn btn-outline-light text-center btnMarg" style="width:40%; border-radius: 5px">Run Fizz-Buzz</button>
+            </div>
+        </div>
+    </div>
+    <div class="container" id="fbOutBox">
+        <div class="row">
+            <div class="col-lg-12 textBox">
+                <p id="fbOut" class="text-center h4"></p>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        // allow the use to press enter to begin function
+        var input = document.getElementById("fbInput2");
+        input.addEventListener("keyup", function (event) {
+            if (event.keyCode === 13) {
+                event.preventDefault();
+                document.getElementById("btnFB").click();
+            }
+        });
+
+		$("#fbOutBox").hide();
+
+        $("#btnFB").on("click", function () {
+            let fizzMod = 0;
+            let buzzMod = 0;
+            //let output = "";
+            let output = new Array();
+
+            let fizzNum = parseInt($("#fbInput1").val());
+            let buzzNum = parseInt($("#fbInput2").val());
+
+            for (let loop = 1; loop <= 100; loop++) {
+                fizzMod = loop % fizzNum;
+                buzzMod = loop % buzzNum;
+
+                if (fizzMod == 0 && buzzMod == 0) {
+                    //output += "<span class='fizzbuzz'>FizzBuzz</span>, ";
+                    output.push("<span class='fizzbuzz'>FizzBuzz</span><br>")
+                }
+                else if (fizzMod == 0) {
+                    //output += "<span class='fizz'>Fizz</span>, ";
+					output.push("<span class='fizz'>Fizz</span><br>")
+                }
+                else if (buzzMod == 0) {
+                    //output += "<span class='buzz'>Buzz</span >, ";
+                    output.push("<span class='buzz'>Buzz</span><br>");
+                }
+                else {
+                    //output += loop + ",";
+					output.push(loop);
+                }
+            }
+            $("#fbOut").html(output.join(', '));
+			$("#fbOutBox").show();
+        });
+    </script>
 
     <!-- Bootstrap core JavaScript -->
     <script src="//code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="//cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="//stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <script src="Scripts/bootstrap.bundle.min.js"></script>
+    <script src="Scripts/jquery-3.5.1.min.js"></script>
     <script src="Scripts/prism.js"></script>
 
 </body>
