--- a/Project/Solve.html
+++ b/Project/Solve.html
@@ -68,7 +68,12 @@
                     <div class="container">
                         <div class="row">
                             <div class="col text-center h3">
-                                Please enter two integers that we will refer to as FizzNum and BuzzNum.
+                                Please enter two integers that we will refer to as FizzNum and BuzzNum.<br />
+                                Printed results: <br />
+                                Fizz = printed in place of number divisible by FizzNum.<br />
+                                Buzz = printed in place of number divisible by BuzzNum.<br />
+                                FizzBuzz = printed in place of number divisible by both FizzNum and BuzzNum.<br />
+                                If the number itself is printed, it was divisible by neither. 
                             </div>
                         </div>
                     </div>
