--- a/Project/Index.html
+++ b/Project/Index.html
@@ -66,12 +66,12 @@
             </div>
             <div class="row">
                 <div class="col-lg-12 text-center h3 elWide textBox">
-                    FizzBuzz is a program that takes 2 numbers in put by the user,
-                    then it will print each number from 1-100.
+                    FizzBuzz is a program that takes 2 numbers input by the user,
+                    then it will print a result for each number from 1-100.
                     For each number, if it is divisible by the first number input by the user,
-                    the program will print "Fizz".
-                    If the number is divisible by the second input number, the program will print "Buzz".
-                    If the number is divisible by both input numbers, the program will print "FizzBuzz"!
+                    the program will print "Fizz" in place of the actual number.
+                    If the number is divisible by the second input number, "Buzz" will be printed.
+                    If the number is divisible by both input numbers, "FizzBuzz" will be printed.
                     Otherwise, just the number as it is will be printed.
                 </div>
             </div>
